--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,4 +1,4 @@
-name: mati_flutter
+name: mati-plagin-flutter
 description: Flutter plugin for Mati SDK.
 version: 1.0.0
 author: 'Aleksei Klyshnikov'
