--- a/example/pubspec.yaml
+++ b/example/pubspec.yaml
@@ -12,8 +12,7 @@ dependencies:
 
   fluttertoast: ^3.1.3
 
-  mati_flutter:
-    path: ../
+  mati_plugin_flutter: 1.0.0
 
   cupertino_icons: ^1.0.2
 
