--- a/example/pubspec.yaml
+++ b/example/pubspec.yaml
@@ -1,5 +1,5 @@
-name: mati_flutter_example
-description: Demonstrates how to use the mati_flutter plugin.
+name: mati_plugin_flutter_example
+description: Demonstrates how to use the mati_plugin_flutter .
 
 publish_to: 'none'
 
@@ -12,7 +12,8 @@ dependencies:
 
   fluttertoast: ^3.1.3
 
-  mati_plugin_flutter: 1.0.0
+  mati_plugin_flutter:
+    path: ../
 
   cupertino_icons: ^1.0.2
 
