--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,5 +1,7 @@
 name: mati_plugin_flutter
 description: Flutter plugin for Mati SDK.
+author: Aleksei Klyshnikov <alexey.klyshnikov@mati.io>
+
 version: 2.0.1
 homepage: 'https://github.com/GetMati/mati-flutter-plugin'
 
