--- a/android/build.gradle
+++ b/android/build.gradle
@@ -35,5 +35,5 @@ android {
 
 dependencies {
     implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
-    implementation 'com.getmati:mati-sdk:3.15.0'
+    implementation 'com.metamap:android-sdk:3.15.0'
 }
