--- a/android/build.gradle
+++ b/android/build.gradle
@@ -35,5 +35,7 @@ android {
 
 dependencies {
     implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
-    implementation 'com.metamap:android-sdk:3.19.1'
+    implementation ('com.metamap:android-sdk:3.21.1'){
+        exclude group: 'org.json', module: 'json'
+    }
 }
