--- a/android/build.gradle
+++ b/android/build.gradle
@@ -24,6 +24,7 @@ apply plugin: 'kotlin-android'
 
 android {
     compileSdkVersion 31
+    namespace "com.getmati.metamap_plugin_flutte"
 
     sourceSets {
         main.java.srcDirs += 'src/main/kotlin'
