--- a/android/build.gradle
+++ b/android/build.gradle
@@ -2,6 +2,7 @@ group 'com.getmati.metamap_plugin_flutter'
 version '1.0.1'
 
 buildscript {
+    ext.kotlin_version = '1.6.21'
     repositories {
         google()
         mavenCentral()
